VSE: Transform Tools should not have effect in non-image display modes #91700

Closed
opened 2021-09-25 09:21:31 +02:00 by tintwotin · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 11:38, hash: 2b9ca0f112
Worked: (newest version of Blender that worked as expected)

Short description of error
Transform Tools & gizmos should not have effect in non-image display modes:
{F10583659, size=full}

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 11:38, hash: `2b9ca0f112` Worked: (newest version of Blender that worked as expected) **Short description of error** Transform Tools & gizmos should not have effect in non-image display modes: {[F10583659](https://archive.blender.org/developer/F10583659/display_modes.gif), size=full}
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Thanks for the report.
It's a valid concern, but I feel this is on the verge between bug and design.
So it's up to the #vfx_video team to put this in the module's task stack.

Thanks for the report. It's a valid concern, but I feel this is on the verge between bug and design. So it's up to the #vfx_video team to put this in the module's task stack.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

I think issue here is that tools should not be presented at all in this context if they are useless. In that regard I think this is valid bug.

Now I can imagine looking at luma graph and wanting to move some mask over the image and seeing the result, but I think in practice I would have 2 preview windows open and I will use image preview to move the image.

So will confirm.

I think issue here is that tools should not be presented at all in this context if they are useless. In that regard I think this is valid bug. Now I can imagine looking at luma graph and wanting to move some mask over the image and seeing the result, but I think in practice I would have 2 preview windows open and I will use image preview to move the image. So will confirm.

This issue was referenced by 746ee29d36

This issue was referenced by 746ee29d3638402e2435f47787087b6458f026c7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-10-18 10:32:06 +02:00
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#91700
No description provided.