Fix T91700: Strips can be transformed in scope display modes

Hide gizmos & prevent transform & selection in scope display.